--- a/index.html
+++ b/index.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Venta de Pasteles</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Madame Pastel</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
-    <header style="background-color: #faaca8;">
-        <nav>
-            <div class="logo">
-                <a href="#">Madame Pastel</a>
-            </div>
-            <div class="menu-toggle">
-                <input type="checkbox" id="menu-toggle-checkbox">
-                <label for="menu-toggle-checkbox" class="menu-icon">&#9776;</label>
-                <ul class="menu">
-                    <li><a href="#home">Inicio</a></li>
+    <header>
+        <h1>Madame Pastel</h1>
+        <input type="text" placeholder="Buscar..." class="search-bar">
+    </header>
+
+    <main class="grid-container">
+        <aside class="sidebar">
+            <nav>
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#pasteles">Pasteles</a></li>
                     <li><a href="#precios">Precios</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
-            </div>
-            <div class="search-bar">
-                <input type="text" placeholder="Buscar">
-                <button type="submit" style="background-color: #ddd6f3;">Buscar</button>
-            </div>
-        </nav>
-    </header>
-
-    <main class="container">
-        <aside class="menu">
-            <h2>Menú</h2>
-            <ul>
-                <li><a href="#pastel1">Pastel 1</a></li>
-                <li><a href="#pastel2">Pastel 2</a></li>
-                <!-- Agrega más pasteles aquí -->
-            </ul>
+            </nav>
         </aside>
-        <section class="muestrario">
-            <div class="card" id="pastel1">
-                <img src="https://via.placeholder.com/300" alt="Pastel 1">
-                <h3>Pastel 1</h3>
-                <p>Descripción del Pastel 1</p>
-                <p>Precio: $XX.XX</p>
+
+        <section class="content">
+            <div class="card">
+                <img src="./imagenes/imagenchocolate.png" alt="Pastel 1" width="200" height="200">
+                <h2>Pastel de Chocolate</h2>
+                <p>Delicioso pastel de chocolate con crema y frutas.</p>
+                <p>Precio: $10.99</p>
             </div>
-            <div class="card" id="pastel2">
-                <img src="https://via.placeholder.com/300" alt="Pastel 2">
-                <h3>Pastel 2</h3>
-                <p>Descripción del Pastel 2</p>
-                <p>Precio: $XX.XX</p>
+            <div class="card">
+                <img src="./imagenes/imagenvainilla.png" alt="Pastel 2" width="200" height="200">
+                <h2>Pastel de Vainilla</h2>
+                <p>Delicioso pastel de chocolate con crema y frutas.</p>
+                <p>Precio: $10.99</p>
+            </div>            <div class="card">
+                <img src="./imagenes/imagenfrutos.jpg" alt="Pastel 3" width="200" height="200">
+                <h2>Pastel de Frutos Rojos</h2>
+                <p>Delicioso pastel de chocolate con crema y frutas.</p>
+                <p>Precio: $10.99</p>
             </div>
-            <!-- Agrega más cards aquí -->
+            <div class="card">
+                <img src="./imagenes/imagennaranja.jpg" alt="Pastel 4" width="200" height="200">
+                <h2>Pastel de Naranja</h2>
+                <p>Delicioso pastel de Naranja con crema y frutas.</p>
+                <p>Precio: $10.99</p>
+            </div>
+            <div class="card">
+                <img src="./imagenes/imagenvainilla.png" alt="Pastel 5" width="200" height="200">
+                <h2>Pastel de Limón</h2>
+                <p>Delicioso pastel de Limón con crema y frutas.</p>
+                <p>Precio: $10.99</p>
+            </div>
+            <div class="card">
+                <img src="./imagenes/imagenchocolate.png" alt="Pastel 6" width="200" height="200">
+                <h2>Pastel de Marroc</h2>
+                <p>Delicioso pastel de chocolate con crema y frutas.</p>
+                <p>Precio: $10.99</p>
+            </div>
+            <!-- Repite para otras cards -->
         </section>
     </main>
 
-    <footer style="background-color: #faaca8;">
-        <p style="color: white;">Pie de página - © 2023 Venta de Pasteles</p>
+    <footer>
+        <p>&copy; 2023 Madame Pastel. Todos los derechos reservados.</p>
     </footer>
 
     <script src="./main.js"></script>
 </body>
-
 </html>
